fix input spacing

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ main {
 }
 input,
 textarea {
-  padding: 0.5rem 1rem;
+  padding: 0.75rem 1rem;
   border: 1px solid var(--grey-md);
   outline: none;
   border-radius: 0.5rem;
